# kopuz

./: Cargo.toml  README.md  flake.nix
.cargo/: config.toml
components/: Cargo.toml
components/src/: bottombar.rs  fullscreen.rs  lib.rs  playlist_detail.rs  playlist_modal.rs  search_genre_detail.rs  search_results.rs  settings_items.rs  showcase.rs  sidebar.rs  titlebar.rs  track_row.rs
config/: Cargo.toml
config/src/: lib.rs
data/: com.temidaradev.rusic.metainfo.xml
discord-presence/: Cargo.toml
hooks/: Cargo.toml
hooks/src/: use_player_controller.rs  use_player_task.rs
kopuz/src/: main.rs
locales/: en.yml  ru.yml  tok.yml
pages/: Cargo.toml
pages/src/: album.rs  artist.rs  favorites.rs  home.rs  lib.rs  logs.rs  playlists.rs  settings.rs  theme_editor.rs
pages/src/jellyfin/: album.rs  artist.rs  favorites.rs  home.rs  library.rs  playlists.rs  search.rs
pages/src/local/: library.rs
pages/src/server/: home.rs  library.rs  playlists.rs
player/: Cargo.toml
player/src/: player.rs
player/src/systemint/: mod.rs
reader/: Cargo.toml
reader/src/: lib.rs  models.rs
rusic/: Cargo.toml  Info.plist
rusic/assets/: main.css  tailwind.css  themes.json
rusic/src/: main.rs  web_storage.rs
rusic_route/: Cargo.toml
rusic_route/src/: lib.rs
scrobble/: Cargo.toml
server/: Cargo.toml
server/src/: jellyfin.rs
systemd/: rusic-web.service
utils/: Cargo.toml
utils/src/: lib.rs  themes.rs
