[workspace]
members = [
   "rusic",
   "components",
   "hooks",
   "pages",
   "player",
   "reader",
   "server", "utils", "config", "rusic_route", "discord-presence", "scrobble",
]
resolver = "3"

[workspace.dependencies]
dioxus = { version = "0.7.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
async-recursion = "1.0"
discord-rich-presence = "1.1.0"
lofty = "0.22.4"
rfd = "0.17.2"
percent-encoding = "2.3.2"
dotenvy = "0.15"
http = "1.4.0"
uuid = { version = "1.20.0", features = ["v4", "fast-rng", "macro-diagnostics"] }
cpal = "0.17"
symphonia = { version = "0.5", features = ["all"] }
rb = "0.4"
jellyfin-sdk-rust = "0.1.2"
reqwest = "0.12"
rand = "0.8"
directories = "6.0"
player = { path = "./player" }
reader = { path = "./reader" }
components = { path = "./components" }
hooks = { path = "./hooks" }
pages = { path = "./pages" }
utils = { path = "./utils" }
config = { path = "./config" }
rusic = { path = "./rusic" }
server = { path = "./server" }
rusic_route = { path = "./rusic_route" }
discord-presence = { path = "./discord-presence" }
scrobble = { path = "./scrobble" }
