[package]
name = "components"
version = "0.3.3"
edition = "2024"

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
uuid = { workspace = true }
player = { workspace = true }
reader = { workspace = true }
rodio = { workspace = true }
utils = { workspace = true }
rusic_route = { workspace = true }
config = { workspace = true }
rfd = { workspace = true }
hooks = { workspace = true }
rand = { workspace = true }
server = { workspace = true }
tokio = { workspace = true, features = ["time"] }
