[package]
name = "hooks"
version = "0.3.6"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
reader = { workspace = true }
utils = { workspace = true }
player = { workspace = true }
tokio = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
discord-presence = { workspace = true }
reqwest = { workspace = true }
server = { workspace = true }
scrobble = { workspace = true }
