[package]
name = "hooks"
version = "0.3.6"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
reader = { workspace = true }
utils = { workspace = true }
player = { workspace = true }
config = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true }
server = { workspace = true }
scrobble = { workspace = true }
web-time = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
tokio = { workspace = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
discord-presence = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
