[package]
name = "player"
version = "0.3.6"
edition = "2024"

[dependencies]
cpal = { workspace = true }
symphonia = { workspace = true }
rb = { workspace = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSDictionary",
    "NSValue",
    "NSObject",
    "NSURL",
    "NSProcessInfo",
] }
objc2-media-player = { version = "0.3.2", features = [
    "MPNowPlayingInfoCenter",
    "MPMediaItem",
    "MPRemoteCommandCenter",
    "MPRemoteCommand",
] }
objc2-app-kit = { version = "0.3.2", features = ["NSImage"] }
objc2-av-foundation = { version = "0.3.2", features = ["AVAudioSession"] }
objc2-avf-audio = { version = "0.3.2", features = ["AVAudioSession"] }
block2 = "0.6"
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = "0.9.0"
tokio = { workspace = true, features = ["full"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62", features = [
    "Foundation",
    "Media",
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_WinRT",
    "Win32_UI_WindowsAndMessaging",
    "Storage_Streams",
    "Win32_System_Com",
] }
tokio = { workspace = true, features = ["full"] }
reqwest = { workspace = true, features = ["blocking"] }
