[package]
name = "rusic"
version = "0.3.6"
edition = "2024"

[package.metadata.bundle]
identifier = "com.temidaradev.rusic"
icon = ["../assets/logo.png"]
category = "public.app-category.music"

[package.metadata.bundle.macos]
info_plist_path = "Info.plist"

[dependencies]
dioxus = { workspace = true, features = ["desktop"] }
uuid = { workspace = true }
player = { workspace = true }
components = { workspace = true }
reader = { workspace = true }
config = { workspace = true }
directories = { workspace = true }
pages = { workspace = true }
rusic_route = { workspace = true }
tokio = { workspace = true }
http = { workspace = true }
hooks = { workspace = true }
percent-encoding = { workspace = true }
discord-presence = { workspace = true }
discord-rich-presence = { workspace = true }
utils = { workspace = true }
rand = { workspace = true }
serde_json = { workspace = true }
urlencoding = "2.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
base64 = "0.22" # TODO REMOVE THIS

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", features = ["std"] }
objc2-foundation = { version = "0.3.2", features = [
    "NSString",
    "NSDictionary",
    "NSValue",
    "NSObject",
    "NSURL",
    "NSProcessInfo",
] }
objc2-media-player = { version = "0.3.2", features = [
    "MPNowPlayingInfoCenter",
    "MPMediaItem",
    "MPRemoteCommandCenter",
    "MPRemoteCommand",
] }
objc2-app-kit = { version = "0.3.2", features = ["NSImage"] }
block2 = "0.6"

[features]
default = []

[profile]
[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"
panic = "abort"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
reqwest = { workspace = true, features = ["blocking"] }
