[package]
name = "utils"
version = "0.3.6"
edition = "2024"

[dependencies]
percent-encoding = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
color-thief = "0.2.2"
image = "0.25.10"
urlencoding = "2.1.3"

[target.'cfg(target_os = "windows")'.dependencies]
base64 = "0.22" # TODO REMOVE THIS
